# datagovindia

./: .gitignore  LICENSE  LICENSE.txt  MAINFEST.in  README.md  mgnrega.csv  pyproject.toml  requirements.txt  setup.py
data/: README.md
datagovindia/: __init__.py  util.py
src/datagovindia/: __init__.py  cli.py
